// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render should render component 1`] = `
<section>
  <Section
    depth={3}
    key="0"
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": 
<button>
  OK
</button>
,
            "evalInContext": [Function],
            "type": "code",
          },
        ],
        "name": "Foo",
      }
    }
  />
  <Section
    depth={3}
    key="1"
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "name": "Bar",
      }
    }
  />
  <Section
    depth={3}
    key="2"
    section={
      Object {
        "sections": Array [
          Object {
            "content": Array [],
            "name": "One",
          },
          Object {
            "content": Array [],
            "name": "Two",
          },
        ],
      }
    }
  />
</section>
`;

exports[`render should render styled component 1`] = `
<SectionsRenderer
  classes={
    Object {
      "root": "rsg--root-0",
    }
  }
>
  <Section
    depth={3}
    key="0"
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": 
<button>
  OK
</button>
,
            "evalInContext": [Function],
            "type": "code",
          },
        ],
        "name": "Foo",
      }
    }
  />
  <Section
    depth={3}
    key="1"
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "name": "Bar",
      }
    }
  />
  <Section
    depth={3}
    key="2"
    section={
      Object {
        "sections": Array [
          Object {
            "content": Array [],
            "name": "One",
          },
          Object {
            "content": Array [],
            "name": "Two",
          },
        ],
      }
    }
  />
</SectionsRenderer>
`;

exports[`should render component renderer 1`] = `
<Styled(Sections)>
  <Section
    depth={3}
    key="0"
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": 
<button>
  OK
</button>
,
            "evalInContext": [Function],
            "type": "code",
          },
        ],
        "name": "Foo",
      }
    }
  />
  <Section
    depth={3}
    key="1"
    section={
      Object {
        "components": Array [],
        "content": Array [
          Object {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "name": "Bar",
      }
    }
  />
  <Section
    depth={3}
    key="2"
    section={
      Object {
        "sections": Array [
          Object {
            "content": Array [],
            "name": "One",
          },
          Object {
            "content": Array [],
            "name": "Two",
          },
        ],
      }
    }
  />
</Styled(Sections)>
`;
